--- a/.config/nginx/local/nginx-app.conf
+++ b/.config/nginx/local/nginx-app.conf
@@ -8,4 +8,13 @@ server {
         uwsgi_pass      unix:///tmp/app.sock;
         include         uwsgi_params;
     }
+    # /static/요청은 alias뒤의 폴더에서 찾아 리턴
+    location /static/ {
+        alias /srv/app/.static_root/;
+    }
+
+    # /media/요청은 alias뒤의 폴더에서 찾아 리턴
+    location /media/ {
+        alias /srv/app/.media/;
+    }
 }
