--- a/.config/settings_public.json
+++ b/.config/settings_public.json
@@ -2,7 +2,7 @@
     "docker": {
         "DockerfileBaseName": "greenwrap",
         "rootImageName": "ubuntu:16.04",
-        "dockerHubImageName": "azelf/greenwrap"
+        "dockerHubImageName": "d.lhy.kr/greenwrap"
     },
     "common": {
         "appName": "greenwrap",
