--- a/.config/uwsgi/local/uwsgi-app.ini
+++ b/.config/uwsgi/local/uwsgi-app.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 chdir = /srv/app/django_app
 home = /root/.pyenv/versions/app
-module = config.wsgi.debug
+module = config.wsgi.local
 
 socket = /tmp/app.sock
 chmod-socket = 666
