--- a/.config/nginx/deploy/nginx-app.conf
+++ b/.config/nginx/deploy/nginx-app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost *.compute.amazonaws.com *.elasticbeanstalk.com *.lhy.kr;
+    server_name localhost *.compute.amazonaws.com *.elasticbeanstalk.com greenwrap-api.lhy.kr;
     charset utf-8;
     client_max_body_size 128M;
 
@@ -8,4 +8,23 @@ server {
         uwsgi_pass      unix:///tmp/app.sock;
         include         uwsgi_params;
     }
+}
+server {
+    listen 80;
+    server_name front.localhost front.greenwrap-master.ap-northeast-2.elasticbeanstalk.com greenwrap.lhy.kr;
+
+    location /  {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_pass http://127.0.0.1:3000/;
+        proxy_redirect off;
+    }
+
+    gzip on;
+    gzip_comp_level 2;
+    gzip_proxied any;
+    gzip_min_length 1000;
+    gzip_disable "MSIE [1-6]\." gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 }
