--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,12 @@ services:
   - postgresql
 
 python:
+  - 3.4
   - 3.5
+  - 3.6
+
+env:
+  - MODE=DEBUG
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_04e0b61f42fd_key -iv $encrypted_04e0b61f42fd_iv -in secrets.tar.enc -out secrets.tar -d
@@ -18,4 +23,4 @@ before_script:
 
 script:
   - python greenwrap/manage.py migrate --noinput
-  - MODE='DEBUG' greenwrap/manage.py test
+  - greenwrap/manage.py test
