--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,20 @@
 language: python
-
 services:
-  - postgresql
-
+- postgresql
 python:
-  - 3.4
-  - 3.5
-  - 3.6
-
+- 3.4
+- 3.5
+- 3.6
 env:
-  - MODE=DEBUG
-
+- MODE=DEBUG
 before_install:
-  - openssl aes-256-cbc -K $encrypted_04e0b61f42fd_key -iv $encrypted_04e0b61f42fd_iv -in secrets.tar.enc -out secrets.tar -d
-  - tar xvf secrets.tar
-
+- openssl aes-256-cbc -K $encrypted_50b936b9edbc_key -iv $encrypted_50b936b9edbc_iv
+  -in secrets.tar.enc -out secrets.tar -d
+- tar xvf secrets.tar
 install:
-  - pip install -r requirements.txt
-
+- pip install -r .requirements/debug.txt
 before_script:
-  - psql -c "CREATE DATABASE travisci;" -U postgres
-
+- psql -c "CREATE DATABASE travisci;" -U postgres
 script:
-  - python greenwrap/manage.py migrate --noinput
-  - greenwrap/manage.py test
+- python greenwrap/manage.py migrate --noinput
+- greenwrap/manage.py test
