--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: python
 services:
 - postgresql
 python:
-- 3.4
-- 3.5
 - 3.6
 env:
 - MODE=DEBUG
@@ -15,6 +13,7 @@ install:
 - pip install -r .requirements/debug.txt
 before_script:
 - psql -c "CREATE DATABASE travisci;" -U postgres
+- cd greenwrap
 script:
-- python greenwrap/manage.py migrate --noinput
-- greenwrap/manage.py test
+- python manage.py migrate --noinput
+- python manage.py test
