--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 python:
 - 3.6
 env:
-- DJANGO_SETTINGS_MODULE=config.settings.deploy
+- DJANGO_SETTINGS_MODULE=config.settings.travis
 before_install:
 - openssl aes-256-cbc -K $encrypted_50b936b9edbc_key -iv $encrypted_50b936b9edbc_iv
   -in secrets.tar.enc -out secrets.tar -d
